// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 iWOAFi"
  >
    <div
      class="container py-16 px-14 mx-auto "
    />
  </div>
</DocumentFragment>
`;

exports[`Section should render with custom background color 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 kXEPyr"
  >
    <div
      class="container py-16 px-14 mx-auto "
    />
  </div>
</DocumentFragment>
`;
